package WeWriteBeta;

option java_package = "com.example.wewritebeta";
option java_outer_classname = "MessageProtos";

message TextCarrier {
  repeated string text = 1;
  optional int32 cursorLoc = 2;
  optional string changedBy = 3;


}
