package WeWriteBeta

option java_package = "com.example.wewritebeta";
option java_outer_classname = "MessageProtos";

message EventCarrier {
  optional string text = 1;
  optional int32 startIndex = 2;
  optional int32 endIndex = 3;
  optional int32 cursorLoc = 4;
  optional string changedBy = 5;
  
  enum EventType
  {
  	INSERT = 0;
  	DELETE = 1;
  	CURSOR = 2;
  	UNDO = 3;
  	REDO = 4;
  }
  
  optional EventType type = 6;

}
